--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
     "abandoned": "braintree/braintree_php",
-    "name": "laravel/cashier-braintree",
+    "name": "laravel/cove-cashier-braintree",
     "description": "Laravel Cashier provides an expressive, fluent interface to Braintree's subscription billing services.",
     "keywords": ["laravel", "braintree", "billing", "cashier"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Taylor Otwell",
-            "email": "taylorotwell@gmail.com"
+            "name": "Ahad Cove",
+            "email": "ahadcove@gmail.com"
         }
     ],
     "require": {
