--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,4 @@
 {
-    "abandoned": "braintree/braintree_php",
     "name": "ahadcove/cashier-braintree",
     "description": "Laravel Cashier provides an expressive, fluent interface to Braintree's subscription billing services.",
     "keywords": ["laravel", "braintree", "billing", "cashier"],
@@ -11,22 +10,22 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "braintree/braintree_php": "~3.38",
-        "dompdf/dompdf": "^0.8.0",
-        "illuminate/contracts": "~5.7.0|~5.8.0|~5.9.0",
-        "illuminate/database": "~5.7.0|~5.8.0|~5.9.0",
-        "illuminate/http": "~5.7.0|~5.8.0|~5.9.0",
-        "illuminate/routing": "~5.7.0|~5.8.0|~5.9.0",
-        "illuminate/support": "~5.7.0|~5.8.0|~5.9.0",
-        "illuminate/view": "~5.7.0|~5.8.0|~5.9.0",
-        "nesbot/carbon": "^1.26.3|^2.0",
-        "symfony/http-kernel": "~4.0"
+        "php": "^7.2",
+        "braintree/braintree_php": "~4.6",
+        "dompdf/dompdf": "^0.8",
+        "illuminate/contracts": "~6.12.0|~6.13.0|~6.14.0",
+        "illuminate/database": "~6.12.0|~6.13.0|~6.14.0",
+        "illuminate/http": "~6.12.0|~6.13.0|~6.14.0",
+        "illuminate/routing": "~6.12.0|~6.13.0|~6.14.0",
+        "illuminate/support": "~6.12.0|~6.13.0|~6.14.0",
+        "illuminate/view": "~6.12.0|~6.13.0|~6.14.0",
+        "nesbot/carbon": "^2.16",
+        "symfony/http-kernel": "~5.0"
     },
     "require-dev": {
         "ext-json": "*",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0"
+        "phpunit/phpunit": "~8.0"
     },
     "autoload": {
         "psr-4": {
@@ -40,7 +39,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0-dev"
+            "dev-master": "4.0-dev"
         },
         "laravel": {
             "providers": [
