--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "illuminate/support": "~6.12.0|~6.13.0|~6.14.0",
         "illuminate/view": "~6.12.0|~6.13.0|~6.14.0",
         "nesbot/carbon": "^2.16",
-        "symfony/http-kernel": "~5.0"
+        "symfony/http-kernel": "~2.7|~3.0|~4.0|~5.0"
     },
     "require-dev": {
         "ext-json": "*",
