--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,12 @@
 {
     "name": "ahadcove/cashier-braintree",
     "description": "Laravel Cashier provides an expressive, fluent interface to Braintree's subscription billing services.",
-    "keywords": ["laravel", "braintree", "billing", "cashier"],
+    "keywords": [
+        "laravel",
+        "braintree",
+        "billing",
+        "cashier"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -13,12 +18,12 @@
         "php": "^7.2",
         "braintree/braintree_php": "~4.6",
         "dompdf/dompdf": "^0.8",
-        "illuminate/contracts": "~6.12.0|~6.13.0|~6.14.0",
-        "illuminate/database": "~6.12.0|~6.13.0|~6.14.0",
-        "illuminate/http": "~6.12.0|~6.13.0|~6.14.0",
-        "illuminate/routing": "~6.12.0|~6.13.0|~6.14.0",
-        "illuminate/support": "~6.12.0|~6.13.0|~6.14.0",
-        "illuminate/view": "~6.12.0|~6.13.0|~6.14.0",
+        "illuminate/contracts": "^7.0",
+        "illuminate/database": "^7.0",
+        "illuminate/http": "^7.0",
+        "illuminate/routing": "^7.0",
+        "illuminate/support": "^7.0",
+        "illuminate/view": "^7.0",
         "nesbot/carbon": "^2.16",
         "symfony/http-kernel": "~2.7|~3.0|~4.0|~5.0"
     },
