--- a/composer.json
+++ b/composer.json
@@ -15,22 +15,22 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "braintree/braintree_php": "~4.6",
-        "dompdf/dompdf": "^0.8",
-        "illuminate/contracts": "^8.0",
-        "illuminate/database": "^8.0",
-        "illuminate/http": "^8.0",
-        "illuminate/routing": "^8.0",
-        "illuminate/support": "^8.0",
-        "illuminate/view": "^8.0",
-        "nesbot/carbon": "^2.16",
-        "symfony/http-kernel": "~2.7|~3.0|~4.0|~5.0"
+        "php": "^8.0.2|^7.0|^9.0",
+        "braintree/braintree_php": "^6.11",
+        "dompdf/dompdf": "^2.0",
+        "illuminate/contracts": "^9.0",
+        "illuminate/database": "^9.0",
+        "illuminate/http": "^9.0",
+        "illuminate/routing": "^9.0",
+        "illuminate/support": "^9.0",
+        "illuminate/view": "^9.0",
+        "nesbot/carbon": "^2.66",
+        "symfony/http-kernel": "~2.7|~3.0|~4.0|~5.0|~6.0"
     },
     "require-dev": {
         "ext-json": "*",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~8.0"
+        "phpunit/phpunit": "~9.0"
     },
     "autoload": {
         "psr-4": {
