--- a/composer.json
+++ b/composer.json
@@ -15,22 +15,22 @@
         }
     ],
     "require": {
-        "php": "^8.0|^7.0|^9.0",
+        "php": "^8.0|^7.0|^9.0|^10.0",
         "braintree/braintree_php": "^6.11",
         "dompdf/dompdf": "^2.0",
-        "illuminate/contracts": "^9.0",
-        "illuminate/database": "^9.0",
-        "illuminate/http": "^9.0",
-        "illuminate/routing": "^9.0",
-        "illuminate/support": "^9.0",
-        "illuminate/view": "^9.0",
+        "illuminate/contracts": "^10.0",
+        "illuminate/database": "^10.0",
+        "illuminate/http": "^10.0",
+        "illuminate/routing": "^10.0",
+        "illuminate/support": "^10.0",
+        "illuminate/view": "^10.0",
         "nesbot/carbon": "^2.66",
         "symfony/http-kernel": "~2.7|~3.0|~4.0|~5.0|~6.0"
     },
     "require-dev": {
         "ext-json": "*",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~9.0"
+        "phpunit/phpunit": "~10.0"
     },
     "autoload": {
         "psr-4": {
